test/classes/initializers/postInit/callPostInit.good
callPostInit.chpl:15: error: explicit calls to postinit() on anything other than 'this' or 'super' are not allowed
